--- a/doc/paper/main.bib
+++ b/doc/paper/main.bib
@@ -8,32 +8,18 @@
 }
 
 
-
-@book{latex2e,
-	author = {Leslie Lamport},
-	year = {1994},
-	title = {{\LaTeX}: a Document Preparation System},
-	publisher = {Addison Wesley},
-	address = {Massachusetts},
-	edition = {2}
+@inproceedings{double_q_learning,
+	title={Deep reinforcement learning with double q-learning},
+	author={Van Hasselt, Hado and Guez, Arthur and Silver, David},
+	booktitle={Proceedings of the AAAI conference on artificial intelligence},
+	volume={30},
+	number={1},
+	year={2016}
 }
 
-
-@article{knuth:1984,
-	title={Literate Programming},
-	author={Donald E. Knuth},
-	journal={The Computer Journal},
-	volume={27},
-	number={2},
-	pages={97--111},
-	year={1984},
-	publisher={Oxford University Press}
-}
-
-
-@article{py_math,
-	title = {Python Math Package},
-	url = {https://docs.python.org/3/library/math.html},
-	author = {Python.org},
-	urldate = {2021-11-24}
+@article{prioritized_replay,
+	title={Prioritized experience replay},
+	author={Schaul, Tom and Quan, John and Antonoglou, Ioannis and Silver, David},
+	journal={arXiv preprint arXiv:1511.05952},
+	year={2015}
 }
