--- a/doc/research_presentation/research_presentation.tex
+++ b/doc/research_presentation/research_presentation.tex
@@ -138,7 +138,25 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{frame}[fragile]{V-Learning vs Q-Learning}
-	TODO
+	\begin{columns}
+		\begin{column}{.5\linewidth}
+			\textbf{Q-Learning:} \\ [1mm]
+			$Q(s_t, a) = \mathbb{R}^4$
+			\begin{figure}
+				\centering
+				\includegraphics[width=.5\linewidth]{pics/maze_q}
+			\end{figure}
+		\end{column}
+		\begin{column}{.5\linewidth}
+			\textbf{V-Learning:} \\ [1mm]
+			$V(s_{t+1}) = \mathbb{R}$
+			\begin{figure}
+				\centering
+				\includegraphics[width=.5\linewidth]{pics/maze_v}
+			\end{figure}
+		\end{column}
+	\end{columns}
+	Nonetheless, both functions learn the value of a field in the maze under the current policy. 
 \end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
