--- a/doc/research_presentation/research_presentation.tex
+++ b/doc/research_presentation/research_presentation.tex
@@ -299,7 +299,7 @@
 		\begin{column}{.6\linewidth}
 			To test different agents and perform a quasi-gridsearch in feasible time I created a mock environment \\ [1mm]
 			Internal state is a fictional F1-Score \\ [1mm]
-			Each sample is a collection of random "quality" values that govern mock Entropy and BvsSB scores \\ [1mm]
+			Each datapoint has a random "quality" value that governs its mock Entropy and BvsSB scores \\ [1mm]
 			A choosen sample add its "quality" value to the internal F1-Score 
 		\end{column}
 		\begin{column}{.4\linewidth}
